# awesome-marlowe

./: .gitignore  README.md  ReadMe.md
austin-2022/: ReadMe.md  flake.nix  marlowe-hackathons.cabal
austin-2022/app/: BiddingFee.hs  DutchAuction.hs  EnglishAuction.hs  FirstPriceBid.hs  Main.hs  ReverseAuction.hs  SecondPriceBid.hs  StableCoin.hs
austin-2022/solutions/: DutchAuction.json  EnglishAuction.json
austin-2022/solutions/core-json/: BiddingFee.json  FirstPrice.json  ReverseAuction.json  StableCoin.json
austin-2022/solutions/extended-json/: BiddingFee.json  DutchAuction.json  EnglishAuction.json  FirstPriceBid.json  ReverseAuction.json  SecondPriceBid.json
austin-2022/solutions/extended.json/: DutchAuction.json  EnglishAuction.json
austin-2022/solutions/marlowe/: BiddingFee.marlowe  DutchAuction.marlowe  EnglishAuction.marlowe  FirstPriceBid.marlowe  ReverseAuction.marlowe  SecondPriceBid.marlowe
austin-2022/solutions/typescript/: EnglishAuction.ts  ReverseAuction.ts  StableCoin.ts
contracts/marlowe-hackathons/: .gitignore  ReadMe.md
contracts/marlowe-hackathons/austin-2022/: ReadMe.md  cabal.project
contracts/marlowe-hackathons/austin-2022/app/: EnglishAuction.hs  FirstPriceBid.hs  Main.hs
contracts/marlowe-hackathons/austin-2022/solutions/core-json/: DutchAuction.json  EnglishAuction.json  SecondPrice.json
contracts/marlowe-hackathons/austin-2022/solutions/extended-json/: BiddingFee.json  EnglishAuction.json  ReverseAuction.json  StableCoin.json
contracts/marlowe-hackathons/austin-2022/solutions/marlowe/: BiddingFee.marlowe  FirstPriceBid.marlowe  StableCoin.marlowe  (+2 more)
contracts/marlowe-hackathons/ulaanbaatar/: challenge.md
contracts/marlowe-hackathons/ulaanbaatar/solutions/: dutch.hs  fee.hs  vickrey.hs
solutions/: First-price-sealed-bid.hs  reverse.hs
ulaanbaatar/solutions/: english.hs  reverse.hs
(+4 files in other folders)
