cabal-version      : 3.0
name               : marlowe-hackathons
version            : 0.1.0.0
synopsis           : Marlowe challenge problems for hackathons.
copyright          : (c) 2022 IOHK
license            : Apache-2.0
license-file       : LICENSE
author             : Brian W Bush <brian.bush@iohk.io>
maintainer         : Brian W Bush <brian.bush@iohk.io>
category           : Network
build-type         : Simple
extra-source-files : ReadMe.md

executable marlowe-hackathons
  main-is           : Main.hs
  other-modules     : BiddingFee
                      DutchAuction
                      EnglishAuction
                      FirstPriceBid
                      SecondPriceBid
                      ReverseAuction
  hs-source-dirs    : app
  build-depends     : base >= 4.9 && < 5
                    , aeson
                    , filepath
                    , marlowe
  ghc-options       : -Wall
